update name class

--- a/css/index.css
+++ b/css/index.css
@@ -98,7 +98,7 @@ body {
     justify-content: center;
 }
 
-.main__cta .main__image__mobile {
+.main__cta .main__image__cart {
     margin-right: 0.625rem;
 }
 
